# agent-army

./: .gitignore  CLAUDE.md  Makefile  PLUGINS_AND_SKILLS.md  README.md  SKILLS.md  config.json  manifest.json
agents/: arch-reviewer.md  comment-analyzer.md  db-coder.md  db-reviewer.md  db-tester.md  docker-builder.md  docker-reviewer.md  docker-tester.md  docs-writer.md  go-coder.md  go-reviewer.md  go-tester.md  pr-test-analyzer.md  py-coder.md  py-reviewer.md  py-tester.md  react-coder.md  react-reviewer.md  react-tester.md  ts-coder.md  ts-reviewer.md  ts-tester.md  type-design-analyzer.md
army/: PLUGINS_AND_SKILLS.md  README.md  go.mod  manifest.json
armyv2/: CLAUDE.md  README.md  go.mod
claude/: CLAUDE.md  SKILLS.md  settings.json
cursor/: 000-index.mdc  100-golang.mdc  101-typescript.mdc  102-python.mdc  103-react.mdc  200-planning.mdc  300-git.mdc  400-api-design.mdc  401-database.mdc  500-observability.mdc  501-security.mdc  502-cross-cutting.mdc  503-concurrency.mdc  504-testing.mdc  505-caching.mdc  506-messaging.mdc  507-ai-dev.mdc
docs/: AGENT-GUIDE.md
rules/: INDEX.md  ai-assisted-development.md  api-design.md  caching-patterns.md  code-quality.md  concurrency.md  cross-cutting.md  database.md  (+6 more)
src/: pyproject.toml
src/agent_army/: __init__.py  __main__.py  bootstrap.py  cli.py  editor.py  frontmatter.py  graph.py  loader.py  manifest.py  models.py  resolver.py  scaffold.py
src/tests/: conftest.py  test_bootstrap.py  test_editor.py  test_frontmatter.py  test_graph.py  test_loader.py  test_manifest.py  test_resolver.py  test_scaffold.py
(+480 files in other folders)
