[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-army"
version = "0.1.0"
description = "Dependency management for rules, skills, and agents"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
agent-army = "agent_army.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
